# streetcred

./: .env  .gitignore  README.md
frontend/: .env  .env.example  BADGE_COMPONENTS_GUIDE.md  package-lock.json  package.json
frontend/src/: App.css  App.jsx  config.js  index.css
frontend/src/Supabase/: client.js
frontend/src/components/: BadgeProgress.css  BadgeProgress.jsx  ProtectedRoute.jsx  UserBadges.css  UserBadges.jsx  navbar.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/pages/: About.css  About.jsx  BadgeEarned.jsx  LandingPage.css  LandingPage.jsx  Leaderboard.css  Leaderboard.jsx  (+16 more)
streetcred_backend/: README.md  geolocation.md
streetcred_backend/backend/: geminimodels.md  langchain_py.md  supabase.md
streetcred_backend/backend/streetcred/: CLAUDE.md  main.py  manage.py  pyproject.toml  pythongeohash.md  start.sh  test_supabase.py
streetcred_backend/backend/streetcred/myapp/: BADGE_SYSTEM_README.md  REPORTS_SYSTEM_README.md  admin.py  api.py  auth.py  badge_api.py  badge_rewards.py  badge_setup.sql  genimg_upload_image.py  google_imggen.py  locater.py  models.py  reassign_badges.sql  reassign_user_badges.py  report_image_upload.py  reports_api.py  reports_setup.sql  special_badges.sql  views.py
streetcred_backend/backend/streetcred/myapp/migrations/: 0001_initial.py  0002_rename_lng_location_lon.py  0003_report.py  0004_report_image_url.py  0005_userlocation.py
streetcred_backend/backend/streetcred/myapp/templates/myapp/: map.html
streetcred_backend/backend/streetcred/streetcred/: asgi.py  settings.py  urls.py  wsgi.py  xrpl_py.md
(+3 files in other folders)
